Fix landing page (#106)
* add responsiveness to contact section

* add right marquee data for design hero section

* fix top position for mobile on home page

* fix mobile view for home page

* fix marquee gap on home page

* fix home page from being off centered on mobile view

--- a/src/features/layout/home/home.module.scss
+++ b/src/features/layout/home/home.module.scss
@@ -27,7 +27,7 @@
 
 .homeContainer {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,8 +54,10 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      height: 100vh;
       width: max-content;
-      position: absolute;
+      position: fixed;
+      top: 0;
 
       .homeTitle {
         font-weight: 900;
@@ -76,10 +78,10 @@
     .dualPageContainer {
       justify-content: center;
       align-items: center;
-      height: 100%;
 
       @media screen and (width <= 1200px) {
         flex-direction: column;
+        height: auto;
       }
 
       .divider {
@@ -141,14 +143,9 @@
         @media screen and (width <= 1200px) {
           width: 100vw;
           padding: 4rem 0;
-          height: auto;
+          height: fit-content;
           flex-direction: column;
           position: relative;
-          top: 70%;
-        }
-
-        @media screen and (width <=800px) {
-          top: 50%;
         }
 
         .pagePortalTitle {
@@ -194,10 +191,6 @@
             @media screen and (width <=1200px) {
               display: none;
             }
-          }
-
-          .homeMarquee {
-            height: 300px;
           }
 
           .portalBottom {
