--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,12 @@
   overflow: hidden;
 }
 
+@media screen and (width <= 1200px) {
+  :root:has(.noScroll) {
+    overflow-y: scroll;
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -33,6 +39,10 @@ body {
   overflow-x: hidden;
   color: #fff;
   background-color: #000;
+
+  /* To stop the content on the landing page from being off center on mobile view */
+  position: sticky;
+  left: 0;
 }
 
 a {
